--- a/analysic-common/pom.xml
+++ b/analysic-common/pom.xml
@@ -28,4 +28,19 @@
 			<version>0.1-YP-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	
+	<build>  
+    <plugins>  
+        <plugin>  
+            <groupId>org.apache.maven.plugins</groupId>  
+            <artifactId>maven-compiler-plugin</artifactId>  
+            <version>2.0.2</version>  
+            <configuration>  
+                <source>1.7</source>  
+                <target>1.7</target>  
+            </configuration>  
+        </plugin>  
+    </plugins>  
+</build> 
+
 </project>
