--- a/test-framework/pom.xml
+++ b/test-framework/pom.xml
@@ -20,6 +20,18 @@
 			<artifactId>randomizedtesting-runner</artifactId>
 			<version>2.1.9</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.carrotsearch.randomizedtesting</groupId>
+			<artifactId>junit4-ant</artifactId>
+			<version>2.1.9</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant</artifactId>
+			<version>1.8.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.yieng.learn</groupId>
