--- a/lucene-core/pom.xml
+++ b/lucene-core/pom.xml
@@ -34,6 +34,15 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>  
+				<groupId>org.apache.maven.plugins</groupId>  
+				<artifactId>maven-surefire-plugin</artifactId>  
+				<configuration>  
+				<skip>true</skip>  
+				<testFailureIgnore>true</testFailureIgnore>  
+				</configuration>  
+			</plugin> 
 		</plugins>
 	</build>
 
